# social_download

./: .gitignore  pyproject.toml  requirements.py
src/tm_downloader/: app.py  handler.py
src/tm_downloader/app/usecases/: telegram.py
src/tm_downloader/domain/: context.py  event.py  manager.py  model.py  queue.py
src/tm_downloader/domain/events/: manager.py
src/tm_downloader/domain/models/: media.py  platforms.py  usecases.py
src/tm_downloader/infrastructure/: click_types.py  controller.py  telegram.py  twitter.py
src/tm_downloader/presentation/cli/: cli_main.py
src/tm_downloader/presentation/gui/: guimain.py
src/tm_downloader/presentation/gui/telegram/components/: downloader.py  uri.py
src/tm_downloader/presentation/gui/telegram/pages/: telegram_page.py
src/tm_downloader/telegram/: auth_manager.py  download_manager.py  runtime.py  service.py
src/tm_downloader/ui/: controller.py
src/tm_downloader/ui/cli/: cli_main.py
src/tm_downloader/ui/gui/: guimain.py
src/tm_downloader/ui/gui/telegram/: main_page.py
src/tm_downloader/ui/gui/telegram/components/: file_picker.py  url.py
src/tm_downloader/utils/: tm_client.py  url.py
tests/: conftest.py  test_download_controller.py
