[project]
name = "tm-downloader"
version = "0.1.0"
description = ""
authors = [
    {name = "Gabriel Liendo",email = "pieroandrewe@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "telethon (==1.41.2)",
    "python-dotenv (==1.1.1)",
    "flet (==0.28.3)",
    "click (==8.3.1)"
]

[tool.poetry]
packages = [{include = "tm_downloader", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
